--- a/amazon.html
+++ b/amazon.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="styles/shared/general.css" />
         <link rel="stylesheet" href="styles/shared/amazon-header.css" />
         <link rel="stylesheet" href="styles/pages/amazon.css" />
-        <title>Amazon Project</title>
+        <title>Amazon Project.</title>
     </head>
 
     <body>
